[package]
name = "LiveFeed_wss"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2", features = ["ws", "rustls"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1"
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = "1.0.228"
